ARMTemplates/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "storage_account_name": {
            "type": "string",
            "metadata": {
                "description": "Name of the storage account"
            }
        },
        "storage_account_sku": {
            "type": "string",
            "metadata": {
                "description": "Storage Account SKU"
            },
            "allowedValues": [
                "Premium_LRS",
                "Premium_ZRS",
                "Standard_GRS",
                "Standard_GZRS",
                "Standard_LRS",
                "Standard_RAGRS",
                "Standard_RAGZRS",
                "Standard_ZRS"
            ],
            "defaultValue": "Standard_LRS"
        },
        "virtual_network_name": {
            "type": "string",
            "metadata": {
                "description": "Name of the virtual network"
            }
        },
        "virtual_machine_name": {
            "type": "string",
            "metadata": {
                "description": "Name of the virtualmachine"
            }
        },
        "virtual_machine_size": {
            "type": "string",
            "metadata": {
                "description": "Size of the virtual machine"
            }
        },
        "adminUser": {
            "type": "string",
            "metadata": {
                "description": "User name for the VM login"
            }
        },
        "adminPassword": {
            "type": "string",
            "metadata": {
                "description": "Password for the VM login"
            }
        }
    },
    "variables": {
        "tags": {
            "CreatedBy": "Ramakrishna",
            "Project": "SAANVIK IT",
            "Environment": "DEV",
            "Department": "IT"
        },
        "vnet_addressSpace": ["192.168.0.0/24","172.16.0.0/25"],
        "subnet-name-01": "saanvikit-snet-01",
        "subnet-name-02": "saanvikit-snet-02",
        "subnet1-addressPrefix": "192.168.0.0/25",
        "subnet2-addressPrefix": "192.168.0.128/25",
        "public_ip_name": "saanvikit-pubip-01",
        "network_security_group_name": "saanvikit-nsg-01",
        "network_interface_name": "saanvikit-nic-01"
    },
    "resources": [
        {
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2021-01-01",
            "name": "[toLower(parameters('storage_account_name'))]",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
            "sku": {
                "name": "[parameters('storage_account_sku')]"
            },
            "kind": "StorageV2"
        },
        {
            "name": "[parameters('virtual_network_name')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups',variables('network_security_group_name'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": "[variables('vnet_addressSpace')]"
                },
                "subnets": [
                    {
                        "name": "[variables('subnet-name-01')]",
                        "properties": {
                            "addressPrefix": "[variables('subnet1-addressPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('network_security_group_name'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('subnet-name-02')]",
                        "properties": {
                            "addressPrefix": "[variables('subnet2-addressPrefix')]"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('public_ip_name')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
            "properties": {
                "publicIPAllocationMethod": "Static",
                "dnsSettings": {
                    "domainNameLabel": "saanvikit"
                }
            }
        },
        {
            "name": "[variables('network_security_group_name')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "description": "Allow_RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "description": "Allow_HTTP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('network_interface_name')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtual_network_name'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('public_ip_name'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtual_network_name'), variables('subnet-name-01'))]"
                            },
                            "publicipaddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('public_ip_name'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('virtual_machine_name')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2021-03-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', toLower(parameters('storage_account_name')))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('network_interface_name'))]"
            ],
            "tags": "[variables('tags')]",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('virtual_machine_size')]"
                },
                "osProfile": {
                    "computerName": "EWDev25000",
                    "adminUsername": "[parameters('adminUser')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2022-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat(parameters('virtual_machine_name'),'-','osdisk')]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('network_interface_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', toLower(parameters('storage_account_name')))).primaryEndpoints.blob]"
                    }
                }
            }
        }
        
    ],
    "outputs": {}
}
